syntax = "proto3";

package users;

import "google/protobuf/timestamp.proto";

service UsersService {
  rpc FindUserById (FindUserById) returns (User) {}
  rpc CreateUser (CreateUser) returns (User) {}
}


enum  Role {
  USER = 0;
  ADMIN = 1;
}


message FindUserById {
  string id = 1;
}

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  Role role = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message CreateUser {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
}